fixed scroll problem on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,8 @@ body {
 .color-font-preto-50{
   color: #5c5c5c;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
